flapivor/tests/tests-m3/hopix/typechecker/good/multipatterns.hopix
type t = A | B
type u = S (t) | T (int)

val x : int = S (A) ? {
| S (A | B)  => 0
| (_ : u) => 1
}