flapivor/tests/tests-m3/hopix/typechecker/bad/local.hopix
val test : int =
  val x : int = 'a';
  val z : int -> int = \(x : int) => x + 1;
  val u : int = z (x);
  u